src/objects/PM_Status__c.object
<CustomObject>
    <description>Project Management Status Reporting object</description>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>Week Ending Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_Latest_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Latest Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MPM_Project__c</fullName>
        <label>Project</label>
        <referenceTo>Milestone1_Project__c</referenceTo>
        <relationshipLabel>PM Status</relationshipLabel>
        <relationshipName>PM_Status</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status_Summary__c</fullName>
        <label>Status Summary</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>PM Status</label>
    <nameField>
        <displayFormat>S-{00000000}</displayFormat>
        <label>Status Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PM Status</pluralLabel>
    <recordTypes>
        <fullName>Draft</fullName>
        <active>true</active>
        <label>Draft</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>